--- a/src/exercise1/start/FlagFacts/MainPage.xaml
+++ b/src/exercise1/start/FlagFacts/MainPage.xaml
@@ -4,7 +4,8 @@
              xmlns:local="clr-namespace:FlagFacts"
              xmlns:eff="clr-namespace:FlagFacts.Effects"
              x:Class="FlagFacts.MainPage"
-             Title="Fun with Flags">
+             Title="Fun with Flags"
+              >
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Previous"
@@ -30,16 +31,17 @@
                     VerticalOptions="Center"
                     Aspect="AspectFit" />
 
-            <Picker x:Name="country" />
+        <Picker x:Name="country" SelectedItem="{Binding Country}" />
 
-            <Label Text="Current Design was Adopted on" FontAttributes="Bold" />
-            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" />
+        <Label Text="Current Design was Adopted on" FontAttributes="Bold" />
+            <DatePicker x:Name="adopted" MinimumDate="01/01/1700" HorizontalOptions="Start" 
+                        Date="{Binding DateAdopted}"/>
 
             <Label Text="Has Shield" FontAttributes="Bold" />
-            <Switch x:Name="hasShield" />
+        <Switch x:Name="hasShield" IsToggled="{Binding IncludesShield}" />
 
             <Label Text="Fun Fact" FontAttributes="Bold" />
-            <Label x:Name="description" />
+        <Label x:Name="description" Text="{Binding Description}" />
 
             <Label x:Name="moreInfo" Text="More Information" Margin="0,0,10,0"
                     TextColor="Blue" HorizontalOptions="End">
@@ -53,5 +55,4 @@
 
         </StackLayout>
     </ScrollView>
-
 </ContentPage>
